log
Tue 21 Mar 2023 05:54:15 PM UTC: 
 tests:  0|6
total_score: 0/70
f41a048
Tue 21 Mar 2023 09:44:09 PM UTC: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  0|6
total_score: 0/70
38ae802
Tue 21 Mar 2023 09:47:21 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
a749a66
Tue 21 Mar 2023 10:27:02 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:41:12: error: ‘L’ undeclared (first use in this function)
   41 |     return L->dato[0];
      |            ^
list.c:41:12: note: each undeclared identifier is reported only once for each function it appears in
list.c:42:1: error: control reaches end of non-void function [-Werror=return-type]
   42 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
0be9e33
Tue 21 Mar 2023 10:27:26 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:41:12: error: ‘L’ undeclared (first use in this function)
   41 |     return L[0];
      |            ^
list.c:41:12: note: each undeclared identifier is reported only once for each function it appears in
list.c:42:1: error: control reaches end of non-void function [-Werror=return-type]
   42 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
61975bb
Tue 21 Mar 2023 10:27:37 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:41:16: error: incompatible types when returning type ‘List’ {aka ‘struct List’} but ‘void *’ was expected
   41 |     return list[0];
      |            ~~~~^~~
list.c:42:1: error: control reaches end of non-void function [-Werror=return-type]
   42 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
5536c04
Tue 21 Mar 2023 10:27:46 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:41:16: error: ‘List’ {aka ‘struct List’} has no member named ‘dato’
   41 |     return list->dato[0];
      |                ^~
list.c:42:1: error: control reaches end of non-void function [-Werror=return-type]
   42 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
beca8e2
Tue 21 Mar 2023 10:35:20 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:40:20: error: ‘head’ undeclared (first use in this function)
   40 |   int primerDato = head->data;
      |                    ^~~~
list.c:40:20: note: each undeclared identifier is reported only once for each function it appears in
list.c:41:12: error: returning ‘int’ from a function with return type ‘void *’ makes pointer from integer without a cast [-Werror=int-conversion]
   41 |     return primerDato;
      |            ^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
5e1c40a
Tue 21 Mar 2023 10:36:44 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:40:20: error: initialization of ‘int’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
   40 |   int primerDato = list->head->data;
      |                    ^~~~
list.c:41:12: error: returning ‘int’ from a function with return type ‘void *’ makes pointer from integer without a cast [-Werror=int-conversion]
   41 |     return primerDato;
      |            ^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
17def48
Tue 21 Mar 2023 10:36:55 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:40:20: error: initialization of ‘int’ from ‘Node *’ makes integer from pointer without a cast [-Werror=int-conversion]
   40 |   int primerDato = list->head;
      |                    ^~~~
list.c:41:12: error: returning ‘int’ from a function with return type ‘void *’ makes pointer from integer without a cast [-Werror=int-conversion]
   41 |     return primerDato;
      |            ^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
9fd1705
Tue 21 Mar 2023 10:40:20 PM UTC: 
 list.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:40:9: error: ‘List’ {aka ‘struct List’} has no member named ‘firts’
   40 | if(!list->firts) return NULL;
      |         ^~
list.c:41:21: error: ‘List’ {aka ‘struct List’} has no member named ‘firts’
   41 |   list->current=list->firts;
      |                     ^~
list.c:42:15: error: ‘List’ {aka ‘struct List’} has no member named ‘first’
   42 |   return (list->first->data);
      |               ^~
list.c:43:1: error: control reaches end of non-void function [-Werror=return-type]
   43 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
5f09698
Tue 21 Mar 2023 10:41:19 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:40:9: error: ‘List’ {aka ‘struct List’} has no member named ‘firts’
   40 | if(!list->firts) return NULL;
      |         ^~
list.c:41:21: error: ‘List’ {aka ‘struct List’} has no member named ‘firts’
   41 |   list->current=list->firts;
      |                     ^~
Compilation failed
747b679
Tue 21 Mar 2023 10:41:25 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:40:9: error: ‘List’ {aka ‘struct List’} has no member named ‘firts’
   40 | if(!list->firts) return NULL;
      |         ^~
Compilation failed
dfdf35f
Tue 21 Mar 2023 10:41:32 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
d9645fd
Tue 21 Mar 2023 11:12:08 PM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:46:11: error: ‘List’ {aka ‘struct List’} has no member named ‘next’
   46 |   if(!list->next) return NULL;
      |           ^~
list.c:47:21: error: ‘List’ {aka ‘struct List’} has no member named ‘next’
   47 |   list->current=list->next;
      |                     ^~
list.c:48:16: error: ‘List’ {aka ‘struct List’} has no member named ‘next’
   48 |     return list->next->data;
      |                ^~
list.c:49:1: error: control reaches end of non-void function [-Werror=return-type]
   49 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
04bed13
